[package]
name = "clockworker"
version = "0.1.2"
edition = "2021"
description = "A single-threaded async executor with EEVDF-based fair scheduling and pluggable task schedulers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikhilgarg28/clockworker"
authors = ["Nikhil Garg <nikhilgarg28@gmail.com>"]
keywords = ["async", "executor", "scheduler", "runtime", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
flume = "0.11"
futures = "0.3"
slab = "0.4"
static_assertions = "1.1"
ahash = "0.8"
crossbeam-queue = "0.3"
futures-util = "0.3"
nohash-hasher = "0.2"
fastrand = "2.0"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1


[dev-dependencies]
tokio = { version = "1", features = ["full", "time", "rt", "macros"] }
monoio = { version = "0.2" }
smol = { version = "2.0" }
hdrhistogram = "7.0"
async-recursion = "1.1"
tabled = "0.20"
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }
protobuf = "3.7.2"
rand = { version = "0.8", features = ["std"] }
core_affinity = "0.8"
libc = "0.2"

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "tail_latency"
harness = false

[[bench]]
name = "poll_profile"
harness = false

[[bench]]
name = "priority"
harness = false

[[bench]]
name = "overhead_profile"
harness = false

[[bench]]
name = "tcp"
harness = false

[profile.samply]
inherits = "release"
debug = true
