[package]
name = "clockworker"
version = "0.2.3"
edition = "2021"
description = "A single-threaded async executor with EEVDF-based fair scheduling and pluggable task schedulers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikhilgarg28/clockworker"
authors = ["Nikhil Garg <nikhilgarg28@gmail.com>"]
keywords = ["async", "executor", "scheduler", "runtime", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures = "0.3"
slab = "0.4"
static_assertions = "1.1"
futures-util = "0.3"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1


[dev-dependencies]
flume = "0.11"
tokio = { version = "1", features = ["full", "time", "rt", "macros"] }
monoio = { version = "0.2" }
smol = { version = "2.0" }
tabled = "0.20"
rand = { version = "0.8", features = ["std"] }
core_affinity = "0.8"
libc = "0.2"

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "tail"
harness = false

[[bench]]
name = "priority"
harness = false

[[bench]]
name = "overhead_profile"
harness = false

[[bench]]
name = "tcp"
harness = false

[[bench]]
name = "pingpong"
harness = false

[profile.samply]
inherits = "release"
debug = true
